--- a/raw.html
+++ b/raw.html
@@ -1,4 +1,65 @@
 
+ <!-- main content -->
+ <main class="container">
+  <h2>FAQs</h2>
+
+  <div class="faq">
+    <h3>Where is the party?</h3>
+    <p>The Grand Hall, Main Street</p>
+    
+    <h3>What’s the dress code or color of the day?</h3>
+    <p>The color of the day is Royal Blue and Gold. Dress to impress!</p>
+
+    <h3>Can I bring a guest?</h3>
+    <p>
+      Yes, you're welcome to bring one guest. Please let us know via the
+      RSVP form.
+    </p>
+
+    <h3>What time should I arrive?</h3>
+    <p>
+      Plan to arrive by 5:45 PM. The event officially begins at 6:00 PM.
+    </p>
+
+    <h3>Is parking available?</h3>
+    <p>Yes, the venue has ample free parking for guests.</p>
+
+    <h3>Are kids allowed?</h3>
+    <p>Yes, kids are welcome! Let us know if you're bringing any.</p>
+
+    <h3>Will food and drinks be served?</h3>
+    <p>
+      Absolutely. There will be a full dinner buffet and a variety of
+      drinks.
+    </p>
+
+    <h3>Who do I contact for more info?</h3>
+    <p>
+      Reach out to [Organizer’s Name] at [Phone Number] or [Email Address].
+    </p>
+  </div>
+</main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <h2>Event Details</h2>
     <ul>
