--- a/accommodation.html
+++ b/accommodation.html
@@ -1,51 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Accommodation | ASO's 40th Birthday</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Accommodation | ASO's 40th Birthday</title>
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@600&display=swap" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@600&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
+    <!-- CSS -->
+    <!-- Shared Styles -->
+    <link rel="stylesheet" href="styles/base.css" />
 
-  <!-- Navigation -->
-  <nav class="navbar">
-    <div class="container">
-      <h1 class="logo">🎉 ASO@40</h1>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="event-details.html">Event Details</a></li>
-        <li><a href="gifts.html">Gifts</a></li>
-        <li><a href="accommodation.html">Accommodation</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="rsvp.html">RSVP</a></li>
-        <li><a href="faq.html">FAQs</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+    <!-- Page-Specific Styles -->
+    <link rel="stylesheet" href="styles/accommodation.css" />
+
+    <!-- bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <!-- FontAwesome  -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="containerr page-wrapper">
+      <!-- Navigation -->
+
+      <header>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+          <p class="navbar-brand" href="#">ASO@40</p>
+
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarTogglerDemo01"
+            aria-controls="navbarTogglerDemo01"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <!-- <span class="navbar-toggler-icon"></span> -->
+            <!-- <span
+            class="navbar-toggler-icon"
+            style="
+              background-image: url('data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 30 30%27%3E%3Cpath stroke=%27%23d4af37%27 stroke-linecap=%27round%27 stroke-miterlimit=%2710%27 stroke-width=%272%27 d=%27M4 7h22M4 15h22M4 23h22%27/%3E%3C/svg%3E');
+            "
+          ></span> -->
+            <span
+              class="navbar-toggler-icon"
+              style="
+                background-image: url('data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 30 30%27%3E%3Cpath stroke=%27%23003366%27 stroke-linecap=%27round%27 stroke-miterlimit=%2710%27 stroke-width=%272%27 d=%27M4 7h22M4 15h22M4 23h22%27/%3E%3C/svg%3E');
+              "
+            ></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="./index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./about.html">About ASO</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="./rsvp.html">RSVP</a>
+              </li>
+              <!-- <li class="nav-item">
+              <a class="nav-link" href="./gifts.html">Gifts</a>
+            </li> -->
+              <li class="nav-item">
+                <a class="nav-link active" href="./accommodation.html"
+                  >Accommodation</a
+                >
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="./faq.html">FAQs</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </header>
+
+      <!-- Main Content -->
+      <main class="container">
+        <section class="hero-split">
+          <div class="text">
+            <h4>Accommodation Options</h4>
+            <p>
+              We are so grateful you're traveling to celebrate ASO's 40th
+              birthday with us! For your convenience, we've compiled a list of
+              accommodation options located near the celebration venue at The
+              Grand Hall, Middlesbrough.
+            </p>
+
+            <h5>Recommended Hotels</h5>
+            <ul>
+              <li>
+                <a
+                  href="https://www.travelodge.co.uk/hotels/371/Middlesbrough-hotel?checkIn=26/05/2025&checkOut=27/05/2025&rooms[0][adults]=2&rooms[0][children]=0&utm_source=GHF&utm_medium=GHF&utm_campaign=GB0307GHF&WT_tsrc=GHF&utm_content=PPA=1&gad_source=1&gad_campaignid=20275627410&gbraid=0AAAAApy4FERrnRehj1UsgtVxP3Zs8fvhf&gclid=Cj0KCQjwiqbBBhCAARIsAJSfZkakaJCURb0i5VWBm_kJN_95Mj12AX7jD69d1iFMAmOZ38VwwcvfxpoaAvvqEALw_wcB"
+                  target="_blank"
+                  >Travelodge Middlesbrough</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://www.premierinn.com/gb/en/hotels/england/north-yorkshire/middlesbrough/middlesbrough-town-centre.html?INNID=MIDTOW&ARRdd=26&ARRmm=05&ARRyyyy=2025&NIGHTS=1&ADULT1=2&CHILD1=0&COT1=0&INTTYP1=DB&ROOMS=1&SELECT=STANDARD_ROOM-STANDARD&BRAND=PI&CID=GHFPP_GB_GoogleSearch_desktop_default+checkin=2025-05-26+los=1+MIDTOW&gad_source=1&gad_campaignid=21694319257&gclid=Cj0KCQjwiqbBBhCAARIsAJSfZkZ_a5Moxyu5MUwxqijgdtzXq3RcxnQ6K9jWX0COAeWEh5dNiFzyE2kaAr-XEALw_wcB"
+                  target="_blank"
+                  >Premier Inn Middlesbrough</a
+                >
+              </li>
+            </ul>
+
+            <p>
+              We encourage you to book your accommodation as soon as possible to
+              secure the best rates and availability.
+            </p>
+          </div>
+          <!-- <div class="text">
+            <h4>Accommodation</h4>
+            <p>List of nearby hotels and travel tips...</p>
+            <ul>
+              <li>Royal Inn – 2 mins walk</li>
+              <li>Sunset Lodge – 5 mins by car</li>
+              <li>Airbnb options available nearby</li>
+            </ul>
+          </div> -->
+
+          <div class="image">
+            <img
+              class="home-img"
+              src="images/aso2.jpg"
+              alt="Aso, the celebrant"
+            />
+          </div>
+        </section>
+      </main>
+
+      <!-- Footer -->
+      <footer>
+        <div class="footer-content">
+          <div class="footer-contact">
+            <p>Reach out!</p>
+            <p>
+              <i class="fas fa-phone-alt"></i>
+              <a href="tel:+447487893217">+44 7487 893 217</a>
+            </p>
+            <p>
+              <i class="fas fa-envelope"></i>
+              <a href="mailto:1phillipstunde@gmail.com"
+                >1phillipstunde@gmail.com</a
+              >
+            </p>
+          </div>
+        </div>
+      </footer>
     </div>
-  </nav>
 
-  <!-- main content -->
-  <main class="container">
-    <h2>Accommodation</h2>
-    <p>List of nearby hotels and travel tips...</p>
-    <ul>
-      <li>Royal Inn – 2 mins walk</li>
-      <li>Sunset Lodge – 5 mins by car</li>
-      <li>Airbnb options available nearby</li>
-    </ul>
-  </main>
-
-  <!-- Footer -->
-  <footer class="footer">
-    <p>© 2025 ASO's 40th Birthday Celebration</p>
-  </footer>
-
-</body>
+    <!-- Bootstrap Script -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+      integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
