--- a/rsvp.html
+++ b/rsvp.html
@@ -1,49 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>RSVP | ASO's 40th Birthday</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>RSVP | ASO's 40th Birthday</title>
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@600&display=swap" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@600&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
+    <!-- CSS -->
+    <!-- Shared Styles -->
+    <link rel="stylesheet" href="styles/base.css" />
 
-  <!-- Navigation -->
-  <nav class="navbar">
-    <div class="container">
-      <h1 class="logo">🎉 ASO@40</h1>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="event-details.html">Event Details</a></li>
-        <li><a href="gifts.html">Gifts</a></li>
-        <li><a href="accommodation.html">Accommodation</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="rsvp.html">RSVP</a></li>
-        <li><a href="faq.html">FAQs</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </div>
-  </nav>
+    <!-- Page-Specific Styles -->
+    <link rel="stylesheet" href="styles/rsvp.css" />
 
-  
+    <!-- bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
 
-  <!-- Main Content -->
-   <main class="container">
-    <h2>RSVP</h2>
-    <p>Kindly let us know if you'll be attending. Click below to fill out the RSVP form:</p>
-    <a class="btn-primary" href="https://forms.gle/YOUR_GOOGLE_FORM_LINK" target="_blank">RSVP via Google Form</a>
-  </main>
+    <!-- FontAwesome  -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- Navigation -->
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <p class="navbar-brand" href="#">ASO@40</p>
 
-  <!-- Footer -->
-  <footer class="footer">
-    <p>© 2025 ASO's 40th Birthday Celebration</p>
-  </footer>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarTogglerDemo01"
+          aria-controls="navbarTogglerDemo01"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <!-- <span class="navbar-toggler-icon"></span> -->
+          <!-- <span
+          class="navbar-toggler-icon"
+          style="
+            background-image: url('data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 30 30%27%3E%3Cpath stroke=%27%23d4af37%27 stroke-linecap=%27round%27 stroke-miterlimit=%2710%27 stroke-width=%272%27 d=%27M4 7h22M4 15h22M4 23h22%27/%3E%3C/svg%3E');
+          "
+        ></span> -->
+          <span
+            class="navbar-toggler-icon"
+            style="
+              background-image: url('data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 30 30%27%3E%3Cpath stroke=%27%23003366%27 stroke-linecap=%27round%27 stroke-miterlimit=%2710%27 stroke-width=%272%27 d=%27M4 7h22M4 15h22M4 23h22%27/%3E%3C/svg%3E');
+            "
+          ></span>
+        </button>
 
-</body>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./about.html">About ASO</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link active" href="./rsvp.html">RSVP</a>
+            </li>
+            <!-- <li class="nav-item">
+            <a class="nav-link" href="./gifts.html">Gifts</a>
+          </li> -->
+            <li class="nav-item">
+              <a class="nav-link" href="./accommodation.html">Accommodation</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="./faq.html">FAQs</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <!-- Main Content -->
+    <main class="container">
+      <section class="hero-split">
+        <div class="text">
+          <!-- <h4>RSVP</h4> -->
+          <!-- <h4>Will You Be There?</h4> -->
+          <h4>Join the Celebration!</h4>
+          <p>
+            We can't wait to celebrate ASO's 40th with you!<br/> To ensure we
+            have an accurate headcount, please RSVP by Monday, July 10th, 2025.
+          </p>
+          <p>
+            Kindly let us know if you'll be attending by clicking the link below to
+            fill out the RSVP form
+          </p>
+          <a
+            class="btn-primary"
+            href="https://docs.google.com/forms/d/e/1FAIpQLSeFcV-aIMPStz55UjmsM-3SqtKcPCIJhMphqSoyOcGdyWSe1A/viewform?usp=header"
+            target="_blank"
+            >RSVP via Google Form </a
+          >
+        </div>
+
+        <div class="image">
+          <img
+            class="home-img"
+            src="images/aso3.jpg"
+            alt="Aso, the celebrant"
+          />
+        </div>
+      </section>
+    </main>
+
+    
+
+    <!-- Footer -->
+    <footer>
+      <div class="footer-content">
+        <div class="footer-contact">
+          <p>Reach out!</p>
+          <p>
+            <i class="fas fa-phone-alt"></i>
+            <a href="tel:+447487893217">+44 7487 893 217</a>
+          </p>
+          <p>
+            <i class="fas fa-envelope"></i>
+            <a href="mailto:1phillipstunde@gmail.com"
+              >1phillipstunde@gmail.com</a
+            >
+          </p>
+        </div>
+      </div>
+    </footer>
+
+    <!-- Bootstrap Script -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+      integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
