update to faq page

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <p>
               Celebrate a day of joy, laughter, music, and memories with us.
             </p>
-            <a href="rsvp.html" class="btn-primary">Kindly RSVP</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSeFcV-aIMPStz55UjmsM-3SqtKcPCIJhMphqSoyOcGdyWSe1A/viewform?usp=header" target="_blank" class="btn-primary">Kindly RSVP</a>
           </div>
 
           <div class="image">
