--- a/accommodation.html
+++ b/accommodation.html
@@ -48,13 +48,6 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <!-- <span class="navbar-toggler-icon"></span> -->
-            <!-- <span
-            class="navbar-toggler-icon"
-            style="
-              background-image: url('data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 30 30%27%3E%3Cpath stroke=%27%23d4af37%27 stroke-linecap=%27round%27 stroke-miterlimit=%2710%27 stroke-width=%272%27 d=%27M4 7h22M4 15h22M4 23h22%27/%3E%3C/svg%3E');
-            "
-          ></span> -->
             <span
               class="navbar-toggler-icon"
               style="
@@ -94,55 +87,42 @@
 
       <!-- Main Content -->
       <main class="container">
-        <section class="hero-split">
-          <div class="text">
-            <h4>Accommodation Options</h4>
-            <p>
-              We are so grateful you're traveling to celebrate ASO's 40th
-              birthday with us! For your convenience, we've compiled a list of
-              accommodation options located near the celebration venue at The
-              Grand Hall, Middlesbrough.
-            </p>
+        <section class="accommodation-wrapper">
+          <h4>Nearby Accommodation</h4>
+          <div class="accommodation-list">
+            <div class="accommodation-card">
+              <h5>Premier Inn Middlesbrough</h5>
+              <p>Address: 123 Albert Rd, Middlesbrough</p>
+              <p>Distance: 5 mins from venue</p>
+              <a
+                href="https://www.travelodge.co.uk/hotels/371/Middlesbrough-hotel?checkIn=26/05/2025&checkOut=27/05/2025&rooms[0][adults]=2&rooms[0][children]=0&utm_source=GHF&utm_medium=GHF&utm_campaign=GB0307GHF&WT_tsrc=GHF&utm_content=PPA=1&gad_source=1&gad_campaignid=20275627410&gbraid=0AAAAApy4FERrnRehj1UsgtVxP3Zs8fvhf&gclid=Cj0KCQjwiqbBBhCAARIsAJSfZkakaJCURb0i5VWBm_kJN_95Mj12AX7jD69d1iFMAmOZ38VwwcvfxpoaAvvqEALw_wcB"
+                target="_blank"
+                >View Hotel</a
+              >
+            </div>
 
-            <h5>Recommended Hotels</h5>
-            <ul>
-              <li>
-                <a
-                  href="https://www.travelodge.co.uk/hotels/371/Middlesbrough-hotel?checkIn=26/05/2025&checkOut=27/05/2025&rooms[0][adults]=2&rooms[0][children]=0&utm_source=GHF&utm_medium=GHF&utm_campaign=GB0307GHF&WT_tsrc=GHF&utm_content=PPA=1&gad_source=1&gad_campaignid=20275627410&gbraid=0AAAAApy4FERrnRehj1UsgtVxP3Zs8fvhf&gclid=Cj0KCQjwiqbBBhCAARIsAJSfZkakaJCURb0i5VWBm_kJN_95Mj12AX7jD69d1iFMAmOZ38VwwcvfxpoaAvvqEALw_wcB"
-                  target="_blank"
-                  >Travelodge Middlesbrough</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://www.premierinn.com/gb/en/hotels/england/north-yorkshire/middlesbrough/middlesbrough-town-centre.html?INNID=MIDTOW&ARRdd=26&ARRmm=05&ARRyyyy=2025&NIGHTS=1&ADULT1=2&CHILD1=0&COT1=0&INTTYP1=DB&ROOMS=1&SELECT=STANDARD_ROOM-STANDARD&BRAND=PI&CID=GHFPP_GB_GoogleSearch_desktop_default+checkin=2025-05-26+los=1+MIDTOW&gad_source=1&gad_campaignid=21694319257&gclid=Cj0KCQjwiqbBBhCAARIsAJSfZkZ_a5Moxyu5MUwxqijgdtzXq3RcxnQ6K9jWX0COAeWEh5dNiFzyE2kaAr-XEALw_wcB"
-                  target="_blank"
-                  >Premier Inn Middlesbrough</a
-                >
-              </li>
-            </ul>
+            <div class="accommodation-card">
+              <h5>Holiday Inn Express</h5>
+              <p>Address: Centre Square, Middlesbrough</p>
+              <p>Distance: 7 mins from venue</p>
+              <a
+                href="https://www.premierinn.com/gb/en/hotels/england/north-yorkshire/middlesbrough/middlesbrough-town-centre.html?INNID=MIDTOW&ARRdd=26&ARRmm=05&ARRyyyy=2025&NIGHTS=1&ADULT1=2&CHILD1=0&COT1=0&INTTYP1=DB&ROOMS=1&SELECT=STANDARD_ROOM-STANDARD&BRAND=PI&CID=GHFPP_GB_GoogleSearch_desktop_default+checkin=2025-05-26+los=1+MIDTOW&gad_source=1&gad_campaignid=21694319257&gclid=Cj0KCQjwiqbBBhCAARIsAJSfZkZ_a5Moxyu5MUwxqijgdtzXq3RcxnQ6K9jWX0COAeWEh5dNiFzyE2kaAr-XEALw_wcB"
+                target="_blank"
+                >View Hotel</a
+              >
+            </div>
+            <div class="accommodation-card">
+              <h5>Holiday Inn Express</h5>
+              <p>Address: Centre Square, Middlesbrough</p>
+              <p>Distance: 7 mins from venue</p>
+              <a
+                href="https://www.premierinn.com/gb/en/hotels/england/north-yorkshire/middlesbrough/middlesbrough-town-centre.html?INNID=MIDTOW&ARRdd=26&ARRmm=05&ARRyyyy=2025&NIGHTS=1&ADULT1=2&CHILD1=0&COT1=0&INTTYP1=DB&ROOMS=1&SELECT=STANDARD_ROOM-STANDARD&BRAND=PI&CID=GHFPP_GB_GoogleSearch_desktop_default+checkin=2025-05-26+los=1+MIDTOW&gad_source=1&gad_campaignid=21694319257&gclid=Cj0KCQjwiqbBBhCAARIsAJSfZkZ_a5Moxyu5MUwxqijgdtzXq3RcxnQ6K9jWX0COAeWEh5dNiFzyE2kaAr-XEALw_wcB"
+                target="_blank"
+                >View Hotel</a
+              >
+            </div>
 
-            <p>
-              We encourage you to book your accommodation as soon as possible to
-              secure the best rates and availability.
-            </p>
-          </div>
-          <!-- <div class="text">
-            <h4>Accommodation</h4>
-            <p>List of nearby hotels and travel tips...</p>
-            <ul>
-              <li>Royal Inn – 2 mins walk</li>
-              <li>Sunset Lodge – 5 mins by car</li>
-              <li>Airbnb options available nearby</li>
-            </ul>
-          </div> -->
-
-          <div class="image">
-            <img
-              class="home-img"
-              src="images/aso2.jpg"
-              alt="Aso, the celebrant"
-            />
+            <!-- Add more cards as needed -->
           </div>
         </section>
       </main>
