--- a/faq.html
+++ b/faq.html
@@ -94,89 +94,79 @@
       </header>
       <!-- Main Content -->
       <main class="container">
-        <!-- Hero Section with Image -->
-        <section class="hero-split">
-          <div class="text">
-            <h4>FAQs</h4>
-            <div class="questions">
-              <div class="question">
-                <h6>Where is the party?</h6>
-                <img
-                  class="toggle"
-                  src="./images/plus.svg"
-                  width="25"
-                  alt="plus icon"
-                />
-              </div>
-              <p class="answer">
-                The Grand Hall, Main Street, Middlesbrough.
-              </p>
+        <section class="faq-section">
+          <h4>Frequently Asked Questions</h4>
+          <div class="questions">
+            <div class="question">
+              <h6>Where is the party?</h6>
+              <img
+                class="toggle"
+                src="./images/plus.svg"
+                width="25"
+                alt="plus icon"
+              />
             </div>
-            <div class="questions">
-              <div class="question">
-                <h6>What’s the dress code or color of the day?</h6>
-                <img
-                  class="toggle"
-                  src="./images/plus.svg"
-                  width="25"
-                  alt="plus icon"
-                />
-              </div>
-              <p class="answer">
-                The color of the day is Royal Blue and White. Dress to impress!
-              </p>
+            <p class="answer">The Grand Hall, Main Street, Middlesbrough.</p>
+          </div>
+          <div class="questions">
+            <div class="question">
+              <h6>What’s the dress code or color of the day?</h6>
+              <img
+                class="toggle"
+                src="./images/plus.svg"
+                width="25"
+                alt="plus icon"
+              />
             </div>
-            <div class="questions">
-              <div class="question">
-                <h6>What time should I arrive?</h6>
-                <img
-                  class="toggle"
-                  src="./images/plus.svg"
-                  width="25"
-                  alt="plus icon"
-                />
-              </div>
-              <p class="answer">
-                Plan to arrive by 5:45 PM. The event officially begins at 6:00 PM.
-              </p>
+            <p class="answer">
+              The color of the day is Royal Blue and White. Dress to impress!
+            </p>
+          </div>
+          <div class="questions">
+            <div class="question">
+              <h6>What time should I arrive?</h6>
+              <img
+                class="toggle"
+                src="./images/plus.svg"
+                width="25"
+                alt="plus icon"
+              />
             </div>
-            <div class="questions">
-              <div class="question">
-                <h6>Is parking available?</h6>
-                <img
-                  class="toggle"
-                  src="./images/plus.svg"
-                  width="25"
-                  alt="plus icon"
-                />
-              </div>
-              <p class="answer">
-                Yes, the venue has ample free parking for guests.
-              </p>
+            <p class="answer">
+              Plan to arrive by 5:45 PM. The event officially begins at 6:00 PM.
+            </p>
+          </div>
+          <div class="questions">
+            <div class="question">
+              <h6>Is parking available?</h6>
+              <img
+                class="toggle"
+                src="./images/plus.svg"
+                width="25"
+                alt="plus icon"
+              />
             </div>
-            <div class="questions">
-              <div class="question">
-                <h6>Who do I contact for more info?</h6>
-                <img
-                  class="toggle"
-                  src="./images/plus.svg"
-                  width="25"
-                  alt="plus icon"
-                />
-              </div>
-              <p class="answer">
-                Reach out to Tunde Phillips at +44 7487 893 217 or send an email to 1phillipstunde@gmail.com.
-              </p>
+            <p class="answer">
+              Yes, the venue has ample free parking for guests.
+            </p>
+          </div>
+          <div class="questions">
+            <div class="question">
+              <h6>Who do I contact for more info?</h6>
+              <img
+                class="toggle"
+                src="./images/plus.svg"
+                width="25"
+                alt="plus icon"
+              />
             </div>
+            <p class="answer">
+              Reach out to Tunde Phillips at +44 7487 893 217 or send an email
+              to 1phillipstunde@gmail.com.
+            </p>
           </div>
 
-          <div class="image">
-            <img
-              class="home-img"
-              src="images/aso1.jpg"
-              alt="Aso, the celebrant"
-            />
-          </div>
+          <!-- Add more FAQs below -->
         </section>
       </main>
 
